@@ -4,7 +4,11 @@
  * Sebastian Hammer, Adam Dickmeiss
  *
  * $Log: d1_expout.c,v $
- * Revision 1.3  1997-09-17 12:10:36  adam
+ * Revision 1.4  1997-11-18 09:51:08  adam
+ * Removed element num_children from data1_node. Minor changes in
+ * data1 to Explain.
+ *
+ * Revision 1.3  1997/09/17 12:10:36  adam
  * YAZ version 1.4.
  *
  * Revision 1.2  1995/12/14 16:28:30  quinn
@@ -24,7 +28,7 @@
 #include <proto.h>
 #include <data1.h>
 
-static int *f_integer(data1_node *c, ODR o)
+static int *f_integer(data1_handle dh, data1_node *c, ODR o)
 {
     int *r;
     char intbuf[64];
@@ -38,7 +42,7 @@ static int *f_integer(data1_node *c, ODR o)
     return r;
 }
 
-static char *f_string(data1_node *c, ODR o)
+static char *f_string(data1_handle dh, data1_node *c, ODR o)
 {
     char *r;
 
@@ -50,17 +54,45 @@ static char *f_string(data1_node *c, ODR o)
     return r;
 }
 
-static bool_t *f_bool(data1_node *c, ODR o)
+static bool_t *f_bool(data1_handle dh, data1_node *c, ODR o)
+{
+    bool_t *tf;
+    char intbuf[64];
+
+    if (!c->child || c->child->which != DATA1N_data ||
+	c->child->u.data.len > 63)
+	return 0;
+    tf = odr_malloc (o, sizeof(*tf));
+    sprintf(intbuf, "%.*s", 63, c->child->u.data.data);
+    *tf = atoi(intbuf);
+    return 0;
+}
+
+static Z_IntUnit *f_intunit(data1_handle dh, data1_node *c, ODR o)
 {
     return 0;
 }
 
-static Z_IntUnit *f_intunit(data1_node *c, ODR o)
+static int numeric_tag (data1_handle dh, data1_node *c, ODR o, int select)
 {
-    return 0;
+    if (c->which != DATA1N_tag)
+	return 0;
+    if (!c->u.tag.element)
+    {
+	logf(LOG_WARN, "Malformed tag (no element)");
+	return 0;
+    }
+    if (c->u.tag.element->tag->which != DATA1T_numeric)
+    {
+	logf(LOG_WARN, "Malformed tag (must be numeric)");
+	return 0;
+    }
+    if (select && !c->u.tag.node_selected)
+	return 0;
+    return 1;
 }
 
-static Z_HumanString *f_humstring(data1_node *c, ODR o)
+static Z_HumanString *f_humstring(data1_handle dh, data1_node *c, ODR o)
 {
     Z_HumanString *r;
     Z_HumanStringUnit *u;
@@ -78,7 +110,8 @@ static Z_HumanString *f_humstring(data1_node *c, ODR o)
     return r;
 }
 
-static Z_CommonInfo *f_commonInfo(data1_node *n, int select, ODR o)
+static Z_CommonInfo *f_commonInfo(data1_handle dh, data1_node *n,
+				  int select, ODR o)
 {
     Z_CommonInfo *res = odr_malloc(o, sizeof(*res));
     data1_node *c;
@@ -100,10 +133,10 @@ static Z_CommonInfo *f_commonInfo(data1_node *n, int select, ODR o)
 	    continue;
 	switch (c->u.tag.element->tag->value.numeric)
 	{
-	    case 601: res->dateAdded = f_string(c, o); break;
-	    case 602: res->dateChanged = f_string(c, o); break;
-	    case 603: res->expiry = f_string(c, o); break;
-	    case 604: res->humanStringLanguage = f_string(c, o); break;
+	    case 601: res->dateAdded = f_string(dh, c, o); break;
+	    case 602: res->dateChanged = f_string(dh, c, o); break;
+	    case 603: res->expiry = f_string(dh, c, o); break;
+	    case 604: res->humanStringLanguage = f_string(dh, c, o); break;
 	    /* otherInfo? */
 	    default:
 	        logf(LOG_WARN, "Bad child in commonInfo");
@@ -113,7 +146,8 @@ static Z_CommonInfo *f_commonInfo(data1_node *n, int select, ODR o)
     return res;
 }
 
-static Z_AccessInfo *f_accessInfo(data1_node *n, int select, ODR o)
+static Z_AccessInfo *f_accessInfo(data1_handle dh, data1_node *n,
+				  int select, ODR o)
 {
     Z_AccessInfo *res = odr_malloc(o, sizeof(*res));
     data1_node *c;
@@ -153,7 +187,7 @@ static Z_AccessInfo *f_accessInfo(data1_node *n, int select, ODR o)
     return res;
 }
 
-static int *f_recordCount(data1_node *c, ODR o, void *which)
+static int *f_recordCount(data1_handle dh, data1_node *c, ODR o, void *which)
 {
     int *r= odr_malloc(o, sizeof(*r));
     int *wp = which;
@@ -175,12 +209,13 @@ static int *f_recordCount(data1_node *c, ODR o, void *which)
     return r;
 }
 
-static Z_ContactInfo *f_contactInfo(data1_node *n, ODR o)
+static Z_ContactInfo *f_contactInfo(data1_handle dh, data1_node *n, ODR o)
 {
     return 0;
 }
 
-static Z_TargetInfo *f_targetInfo(data1_node *n, int select, ODR o)
+static Z_TargetInfo *f_targetInfo(data1_handle dh, data1_node *n,
+				  int select, ODR o)
 {
     Z_TargetInfo *res = odr_malloc(o, sizeof(*res));
     data1_node *c;
@@ -191,8 +226,8 @@ static Z_TargetInfo *f_targetInfo(data1_node *n, int select, ODR o)
     res->name = 0;
     res->recentNews = 0;
     res->icon = 0;
-    res->namedResultSets = fl;
-    res->multipleDbSearch = fl;
+    res->namedResultSets = 0;
+    res->multipleDbSearch = 0;
     res->maxResultSets = 0;
     res->maxResultSize = 0;
     res->maxTerms = 0;
@@ -213,43 +248,44 @@ static Z_TargetInfo *f_targetInfo(data1_node *n, int select, ODR o)
 
     for (c = n->child; c; c = c->next)
     {
-	if (c->which != DATA1N_tag || !c->u.tag.element)
-	{
-	    logf(LOG_WARN, "Malformed explain record");
-	    return 0;
-	}
-	if (select && !c->u.tag.node_selected)
+	if (!numeric_tag (dh, c, o, select))
 	    continue;
 	switch (c->u.tag.element->tag->value.numeric)
 	{
-	    case 600: res->commonInfo = f_commonInfo(c, select, o);break;
-	    case 102: res->name = f_string(c, o); break;
-	    case 103: res->recentNews = f_humstring(c, o); break;
+	    case 600: res->commonInfo = f_commonInfo(dh, c, select, o);break;
+	    case 102: res->name = f_string(dh, c, o); break;
+	    case 103: res->recentNews = f_humstring(dh, c, o); break;
 	    case 104: break; /* icon */
-	    case 105: res->namedResultSets = f_bool(c, o); break;
-	    case 106: res->multipleDbSearch = f_bool(c, o); break;
-	    case 107: res->maxResultSets = f_integer(c, o); break;
-	    case 108: res->maxResultSize = f_integer(c, o); break;
-	    case 109: res->maxTerms = f_integer(c, o); break;
-	    case 110: res->timeoutInterval = f_intunit(c, o); break;
-	    case 111: res->welcomeMessage = f_humstring(c, o); break;
-	    case 112: res->contactInfo = f_contactInfo(c, o); break;
-	    case 113: res->description = f_humstring(c, o); break;
+	    case 105: res->namedResultSets = f_bool(dh, c, o); break;
+	    case 106: res->multipleDbSearch = f_bool(dh, c, o); break;
+	    case 107: res->maxResultSets = f_integer(dh, c, o); break;
+	    case 108: res->maxResultSize = f_integer(dh, c, o); break;
+	    case 109: res->maxTerms = f_integer(dh, c, o); break;
+	    case 110: res->timeoutInterval = f_intunit(dh, c, o); break;
+	    case 111: res->welcomeMessage = f_humstring(dh, c, o); break;
+	    case 112: res->contactInfo = f_contactInfo(dh, c, o); break;
+	    case 113: res->description = f_humstring(dh, c, o); break;
 	    case 114: break; /* nicknames */
-	    case 115: res->usageRest = f_humstring(c, o); break;
-	    case 116: res->paymentAddr = f_humstring(c, o); break;
-	    case 117: res->hours = f_humstring(c, o); break;
+	    case 115: res->usageRest = f_humstring(dh, c, o); break;
+	    case 116: res->paymentAddr = f_humstring(dh, c, o); break;
+	    case 117: res->hours = f_humstring(dh, c, o); break;
 	    case 118: break; /* dbcombinations */
 	    case 119: break; /* addresses */
-	    case 500: res->commonAccessInfo = f_accessInfo(c, select, o); break;
+	    case 500: res->commonAccessInfo = f_accessInfo(dh, c,
+							   select, o); break;
 	    default:
 	        logf(LOG_WARN, "Unknown target-info element");
 	}
     }
+    if (!res->namedResultSets)
+	res->namedResultSets = fl;
+    if (!res->multipleDbSearch)
+	res->multipleDbSearch = fl;
     return res;
 }
 
-static Z_DatabaseInfo *f_databaseInfo(data1_node *n, int select, ODR o)
+static Z_DatabaseInfo *f_databaseInfo(data1_handle dh, data1_node *n,
+				      int select, ODR o)
 {
     Z_DatabaseInfo *res = odr_malloc(o, sizeof(*res));
     data1_node *c;
@@ -264,8 +300,8 @@ static Z_DatabaseInfo *f_databaseInfo(data1_node *n, int select, ODR o)
     res->num_nicknames = 0;
     res->nicknames = 0;
     res->icon = 0;
-    res->userFee = fl;
-    res->available = tr;
+    res->userFee = 0;
+    res->available = 0;
     res->titleString = 0;
     res->num_keywords = 0;
     res->keywords = 0;
@@ -290,54 +326,52 @@ static Z_DatabaseInfo *f_databaseInfo(data1_node *n, int select, ODR o)
     res->supplierContactInfo = 0;
     res->submissionContactInfo = 0;
     res->accessInfo = 0;
-
+    
     for (c = n->child; c; c = c->next)
     {
-	if (c->which != DATA1N_tag || !c->u.tag.element)
-	{
-	    logf(LOG_WARN, "Malformed explain record");
-	    return 0;
-	}
-	if (select && !c->u.tag.node_selected)
+	if (!numeric_tag (dh, c, o, select))
 	    continue;
 	switch (c->u.tag.element->tag->value.numeric)
 	{
-	    case 600: res->commonInfo = f_commonInfo(c, select, o); break;
-	    case 102: res->name = f_string(c, o); break;
-	    case 226: res->explainDatabase = ODR_NULLVAL; break;
-	    case 114:
-		res->num_nicknames = 0; res->nicknames = 0; break; /* fix */
-	    case 104: res->icon = 0; break;      /* fix */
-	    case 201: res->userFee = f_bool(c, o); break;
-	    case 202: res->available = f_bool(c, o); break;
-	    case 203: res->titleString = f_humstring(c, o); break;
-	    case 227: res->num_keywords = 0; res->keywords = 0; break; /* fix */
-	    case 113: res->description = f_humstring(c, o); break;
-	    case 205: res->associatedDbs = 0; break; /* fix */
-	    case 206: res->subDbs = 0; break; /* fix */
-	    case 207: res->disclaimers = f_humstring(c, o); break;
-	    case 103: res->news = f_humstring(c, o); break;
-	    case 209: res->recordCount =
-		f_recordCount(c, o, &res->recordCount_which); break;
-	    case 212: res->defaultOrder = f_humstring(c, o); break;
-	    case 213: res->avRecordSize = f_integer(c, o); break;
-	    case 214: res->maxRecordSize = f_integer(c, o); break;
-	    case 215: res->hours = f_humstring(c, o); break;
-	    case 216: res->bestTime = f_humstring(c, o); break;
-	    case 217: res->lastUpdate = f_string(c, o); break;
-	    case 218: res->updateInterval = f_intunit(c, o); break;
-	    case 219: res->coverage = f_humstring(c, o); break;
-	    case 220: res->proprietary = f_bool(c, o); break;
-	    case 221: res->copyrightText = f_humstring(c, o); break;
-	    case 222: res->copyrightNotice = f_humstring(c, o); break;
-	    case 223: res->producerContactInfo = f_contactInfo(c, o); break;
-	    case 224: res->supplierContactInfo = f_contactInfo(c, o); break;
-	    case 225: res->submissionContactInfo = f_contactInfo(c, o); break;
-	    case 500: res->accessInfo = f_accessInfo(c, select, o); break;
-	    default:
-	        logf(LOG_WARN, "Unknown element in databaseInfo");
+	case 600: res->commonInfo = f_commonInfo(dh, c, select, o); break;
+	case 102: res->name = f_string(dh, c, o); break;
+	case 226: res->explainDatabase = ODR_NULLVAL; break;
+	case 114: res->num_nicknames = 0; res->nicknames = 0; break; /* fix */
+	case 104: res->icon = 0; break;      /* fix */
+	case 201: res->userFee = f_bool(dh, c, o); break;
+	case 202: res->available = f_bool(dh, c, o); break;
+	case 203: res->titleString = f_humstring(dh, c, o); break;
+	case 227: res->num_keywords = 0; res->keywords = 0; break; /* fix */
+	case 113: res->description = f_humstring(dh, c, o); break;
+	case 205: res->associatedDbs = 0; break; /* fix */
+	case 206: res->subDbs = 0; break; /* fix */
+	case 207: res->disclaimers = f_humstring(dh, c, o); break;
+	case 103: res->news = f_humstring(dh, c, o); break;
+	case 209: res->recordCount =
+		      f_recordCount(dh, c, o, &res->recordCount_which); break;
+	case 212: res->defaultOrder = f_humstring(dh, c, o); break;
+	case 213: res->avRecordSize = f_integer(dh, c, o); break;
+	case 214: res->maxRecordSize = f_integer(dh, c, o); break;
+	case 215: res->hours = f_humstring(dh, c, o); break;
+	case 216: res->bestTime = f_humstring(dh, c, o); break;
+	case 217: res->lastUpdate = f_string(dh, c, o); break;
+	case 218: res->updateInterval = f_intunit(dh, c, o); break;
+	case 219: res->coverage = f_humstring(dh, c, o); break;
+	case 220: res->proprietary = f_bool(dh, c, o); break;
+	case 221: res->copyrightText = f_humstring(dh, c, o); break;
+	case 222: res->copyrightNotice = f_humstring(dh, c, o); break;
+	case 223: res->producerContactInfo = f_contactInfo(dh, c, o); break;
+	case 224: res->supplierContactInfo = f_contactInfo(dh, c, o); break;
+	case 225: res->submissionContactInfo = f_contactInfo(dh, c, o); break;
+	case 500: res->accessInfo = f_accessInfo(dh, c, select, o); break;
+	default:
+	    logf(LOG_WARN, "Unknown element in databaseInfo");
 	}
     }
+    if (!res->userFee)
+	res->userFee = fl;
+    if (!res->available)
+	res->available = tr;
     return res;
 }
 
@@ -352,20 +386,24 @@ Z_ExplainRecord *data1_nodetoexplain (data1_handle dh, data1_node *n,
 	logf(LOG_WARN, "Attempt to convert a non-Explain record");
 	return 0;
     }
-    if (n->num_children != 1 || n->child->which != DATA1N_tag ||
-	!n->u.tag.element)
+    n = n->child;
+    if (!n || n->next)
     {
 	logf(LOG_WARN, "Explain record should have one exactly one child");
 	return 0;
     }
-    switch (n->child->u.tag.element->tag->value.numeric)
+    if (!numeric_tag (dh, n, o, select))
+	return 0;
+    switch (n->u.tag.element->tag->value.numeric)
     {
-	case 0: res->which = Z_Explain_targetInfo;
-	    if (!(res->u.targetInfo = f_targetInfo(n->child, select, o)))
+	case 0:
+	    res->which = Z_Explain_targetInfo;
+	    if (!(res->u.targetInfo = f_targetInfo(dh, n, select, o)))
 		return 0;
 	    break;
-	case 1: res->which = Z_Explain_databaseInfo;
-	    if (!(res->u.databaseInfo = f_databaseInfo(n->child, select, o)))
+	case 1:
+	    res->which = Z_Explain_databaseInfo;
+	    if (!(res->u.databaseInfo = f_databaseInfo(dh, n, select, o)))
 		return 0;
 	    break;
 	default:
