@@ -32,6 +32,7 @@ elm (4,0)/(4,111)		welcomeMessage				-
 elm (4,0)/(4,112)		contactInfo				-
 elm (4,0)/(4,113)		description				-
 elm (4,0)/(4,114)		nicknames				-
+elm (4,0)/(4,114)/(4,102)	nickname				-
 elm (4,0)/(4,115)		usageRest				-
 elm (4,0)/(4,116)		paymentAddr				-
 elm (4,0)/(4,117)		hours					-
@@ -69,9 +70,9 @@ elm (4,1)/(4,600)/(4,604)	languageCode		HumanStringLanguage
 elm (4,1)/(4,102)		databaseName		DatabaseName
 elm (4,1)/(4,226)		explainDatabase				-
 elm (4,1)/(4,114)		nicknames				-
-elm (4,1)/(4,114)/(4,1000)	nickname				-
+elm (4,1)/(4,114)/(4,102)	nickname				-
 elm (4,1)/(4,104)		icon					-
-elm (4,1)/(4,201)		userFee					!
+elm (4,1)/(4,201)		userFee					-
 elm (4,1)/(4,202)		available		Availability
 elm (4,1)/(4,203)		titleString				-
 elm (4,1)/(4,227)		keywords				-
